--- a/testapp/GoogleAnalytics/Changelog.txt
+++ b/testapp/GoogleAnalytics/Changelog.txt
@@ -1,6 +1,36 @@
 Google Analytics SDK for iOS Changelog
 
 --------------------------------------------
+Version: 3.11 (April 2015)
+--------------------------------------------
+* Report screen resolution using nativeBounds on iOS 8.0 and newer.
+* Added support for click-related campaign parameters.
+* Report iOS hardware model in addition to the device OS version.
+* Report iAd install attribution on iOS 7.1 and newer. This requires the iAd framework.
+* Added deprecation warning for the appview hit type.
+* sqlite3 is now a required library.
+
+--------------------------------------------
+Version: 3.10 (November 2014)
+--------------------------------------------
+* Fixed an issue which prevented all beacons from being sent when dispatching
+  beacons.
+* Updated CuteAnimals sample application to demonstrate how to dispatch when
+  the app goes into the background.
+* Added support for additional Enhanced Ecommerce fields.
+* Removed warning messages about GAIHit and GAIProperty classes missing when
+  compiling against iOS SDK 8.0; those classes were removed.
+* Dispatching beacons is now more efficient, with multiple beacons being
+  dispatched in a single HTTPS request.
+* Requests will be compressed to save on data plan usage under certain
+  circumstances.
+
+--------------------------------------------
+Version: 3.09 (July 2014)
+-------------------------------------------
+* No change.
+
+--------------------------------------------
 Version: 3.08 (June 2014)
 -------------------------------------------
 * The SDK will now collect IDFA and the advertiser tracking enabled flag if the
